--- a/UF4/01 Receptes de cuina amb Recipe XML/index.htm
+++ b/UF4/01 Receptes de cuina amb Recipe XML/index.htm
@@ -7,7 +7,7 @@
   <title>Document</title>
   <script>
     function loadXMLDoc(url) {
-
+      url = "recipes/" + url;
       var xmlhttp;
       var txt = "";
       var x, xx, i;
