--- a/UF4/01 Receptes de cuina amb Recipe XML/index.htm
+++ b/UF4/01 Receptes de cuina amb Recipe XML/index.htm
@@ -72,11 +72,15 @@
           txt += "</div>";
           /* --------------------------------------------------------------------------FINAL PREPARACIO-------------------------------------------------------------------------- */
           /* --------------------------------------------------------------------------PRESENTACIO-------------------------------------------------------------------------- */
-          txt += "<div id=\"presentacio\">";
-          txt += "<h2>Presentació</h2>";
-          x = xmlhttp.responseXML.documentElement.getElementsByTagName("serving");
-          txt += "<p>" + x[0].firstChild.nodeValue + "</p>";
-          txt += "</div>";
+          try{
+            txt += "<div id=\"presentacio\">";
+            txt += "<h2>Presentació</h2>";
+            x = xmlhttp.responseXML.documentElement.getElementsByTagName("serving");
+            txt += "<p>" + x[0].firstChild.nodeValue + "</p>";
+            txt += "</div>";
+          }catch(error){
+
+          }
           /* --------------------------------------------------------------------------FINAL PRESENTACIO-------------------------------------------------------------------------- */
 
           document.getElementById('info').innerHTML = txt;
