--- a/UF4/01 Receptes de cuina amb Recipe XML/index.htm
+++ b/UF4/01 Receptes de cuina amb Recipe XML/index.htm
@@ -7,6 +7,9 @@
   <title>Document</title>
   <script>
     function loadXMLDoc(url) {
+      if(url==""){
+        return;
+      }
       url = "recipes/" + url;
       var xmlhttp;
       var txt = "";
