--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,6 @@
     <li><a href="UF4/02 Receptes de cuina en repositori remot. JSONP i CORS/">02 Receptes de cuina en repositori remot. JSONP i CORS</a></li>
     <li><a href="UF4/03 Comunitats, províncies, municipis. AJAX i bases de dades/">03 Comunitats, províncies, municipis. AJAX i bases de dades</a></li>
     <li><a href="UF4/07 Aplicació web amb motor Python/">07 Aplicació web amb motor Python</a></li>
-    <li><a href="UF4/Examen/"></a>Examen</li>
+    <li><a href="UF4/Examen/">Examen</a></li>
 </body>
 </html>
